Muestra formulario del administrador

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-md-3"></div>
             <div class="col-md-6 login-form-1">
-              <h3>Iniciar Sesión en Hojas de Vida</h3>
+              <h3>Registrarse en Hojas de Vida</h3>
               <form method="post">
                 {% csrf_token %}
                 {{form.as_p}}
