--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -25,8 +25,8 @@
           </li>
         </ul>
         {% if user.is_authenticated %}
-            <h6 class="ml-5">Hola {{ user.username }}! - Rol: {{ user.profile.rol.descripcion }}
-            - Permiso: {{ perms.users.listarusuarios }}</h6>
+            <h6 class="ml-5">Usuario: {{ user.username }} - Rol: {{ user.profile.rol.descripcion }}
+              -Permiso: {{ perms.users.listarusuarios }}</h6>
             <a href="{% url 'logout' %}" class="btn btn-info ml-2">Cerrar Sesión</a>
         {% else %}
           <a href="{% url 'users:signup' %}" class="btn btn-light ml-5">Registrarse</a>
