--- a/templates/registration/account_activation.html
+++ b/templates/registration/account_activation.html
@@ -2,7 +2,7 @@
   {% load static %}
   {% block content %}
   <div class="container">
-    <h4 class="m-5">Estimado {{ username }}! Le hemos enviado un correo electrónico,
+    <h4 class="m-5">Estimado(a) {{ username }}! Hemos enviado un correo electrónico,
       para que finalice el proceso de registro</h4>
   </div>
 {% endblock %}
