--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,7 +8,8 @@
   <body>
     <div class = "container">
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="{% url '' %}">Inicio</a>
+      <a class="navbar-brand" href="{% url '' %}" >Inicio</a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,7 +31,7 @@
             <a href="{% url 'logout' %}" class="btn btn-info ml-2">Cerrar Sesión</a>
         {% else %}
           <a href="{% url 'users:signup' %}" class="btn btn-light ml-5">Registrarse</a>
-          <a href="{% url 'login' %}" class="btn btn-danger ml-2">Iniciar Sesión</a>
+          <a href="{% url 'login' %}" class="btn btn-info">Iniciar Sesión</a>
         {% endif %}
       </div>
     </nav>
