--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="col-md-3"></div>
             <div class="col-md-6 login-form-1">
-              <h3>Iniciar Sesión en Hojas de Vida</h3>
+              <h3 style="text-align:center;">Iniciar Sesión en Hojas de Vida</h3>
               <form method="post">
                 {% csrf_token %}
                 <div class="form-group">
