--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -20,13 +20,13 @@
         <div class="row">
           <div class="col-md-3"></div>
             <div class="col-md-6 login-form-1">
-              <h3>Registrarse en Hojas de Vida</h3>
+              <h3 style="text-align:center;">Registrarse en Hojas de Vida</h3>
               <form method="post">
                 {% csrf_token %}
                 {{form.as_p}}
                 <div class="form-group" style="text-align:center;">
                   <button class="btn waves-effect waves-light" type="submit" name="action">Registrarse
-                      <i class="material-icons right">send</i>
+                      <i class="material-icons right">fingerprint</i>
                   </button>
                 </div>
 
