--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,17 @@
 {% extends 'base/base.html' %}
-  {% load static %}
-  {% block content %}
-  <div class="container">
-    <h4 class="m-5">Pagina de Inicio</h4>
-  </div>
+{% load static %}
+{% block content %}
+
+<html>
+<head>
+<title>GEMA</title>
+</head>
+<body>
+
+<div class="container">
+    <img src="{% static 'images\Bienvenida.png' %}" title="img pricipal" style="width: 100%;max-height: 100%" />
+</div>
+
+</body>
+</html>
 {% endblock %}
