--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,3 +1,5 @@
+{% extends 'base/base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -20,7 +22,7 @@
         <div class="row">
           <div class="col-md-3"></div>
             <div class="col-md-6 login-form-1">
-              <h3 style="text-align:center;">Registrarse en Hojas de Vida</h3>
+              <h3 style="text-align:center;">Registrarse en GEMA</h3>
               <form method="post">
                 {% csrf_token %}
                 {{form.as_p}}
@@ -41,3 +43,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
+{% endblock %}
