--- a/templates/auth/user_app.html
+++ b/templates/auth/user_app.html
@@ -1,15 +1,43 @@
 {% extends 'base/base.html' %}
   {% load static %}
   {% block content %}
-  <div class="container">
-  <!--  <h4 class="m-5">Página donde solo pueden ingresar los autenticados</h4>  -->
-  </div>
-  <h1>Crear Contacto</h1>
-  <form method="post" enctype="multipart/form-data">
-       {% csrf_token %}
-       {{ form.as_p }}
-       <div class="input-field col s12">
-          <input type="submit" value="Grabar" class="blue darken-1 btn">
-       </div>
-  </form>
+
+  <head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="form-group">
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6 login-form-1">
+        <h1 style="text-align:center;">Cargar hoja de vida</h1>
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="input-field col s12">
+              <input type="submit" value="Grabar" class="blue darken-1 btn">
+            </div>
+          </form>
+          </div>
+          </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  </body>
+
 {% endblock %}
