--- a/templates/auth/contact_list.html
+++ b/templates/auth/contact_list.html
@@ -1,72 +1,87 @@
+{% extends 'base/base.html' %}
+  {% load static %}
+  {% block content %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>Lostado empleados</title>
   </head>
+
   <body>
     <div class="container">
       <div class="row">
         <div class="col s12 m12">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Curriculum Vitae</span>
-                <table class="striped">
+          <div class="responsive-table" class="table table-bordered">
+              <h1 style="text-align:center;">LISTA DE EMPLEADOS</h1>
+                <table  class="table table-hover">
 
                   <thead>
                     <tr>
-                      <th>Nombre</th>
+                      <th>Nombre completo</th>
                       <th>Cedula</th>
                       <th>Ciudad</th>
                       <th>Telefono</th>
                       <th>E-mail</th>
-                      <th>Profesion</th>
                       <th>Dependencia</th>
                       <th>Cargo</th>
-                      <th>Curriculum Vitae</th>
+                      <th>Hoja de vida</th>
+                      <th>Editar</th>
                     </tr>
                   </thead>
                   <tbody>
-
                     {% for data in object_list %}
                     <tr>
-                      <td>{{ data.nombre }}</td>
+                      <td><strong>{{ data.nombre }}</strong> <ul>{{ data.profesion }}</ul></td>
                       <td>{{ data.cedula }}</td>
                       <td>{{ data.ciudad }}</td>
                       <td>{{ data.telefono }}</td>
                       <td>{{ data.mail }}</td>
-                      <td>{{ data.profesion }}</td>
                       <td>{{ data.dependencia }}</td>
                       <td>{{ data.cargo }}</td>
                       <td>
-                        <a  href="http://localhost:8000/media/{{ data.archivo }}"> Curriculum Vitae</a>
+                        <a  href="http://localhost:8000/media/{{ data.archivo }}">
+                        <i class="material-icons">picture_as_pdf</i>
+                        </a>
                       </td>
                       <td>
-<!--       -->
                         <a href="{% url 'editar' data.cedula %}">
                             <i class="material-icons">create</i>
                         </a>
-                        <a href="{% url 'eliminar' data.cedula %}">
+                        <!--<a href="{% url 'eliminar' data.cedula %}">
                             <i class="material-icons">clear</i>
-                        </a>
-
+                        </a>-->
                       </td>
                     </tr>
-
-
                     {% endfor %}
-
                   </tbody>
                 </table>
-        <!--Botón para agregar nuevo movimiento-->
-        <div class="fixed-action-btn">
-          <a href="{% url 'users:userapp' %}" class="btn-floating btn-large red">
-            <i class="large material-icons">add</i>
-          </a>
+              </div>
+            </div>
+          </div>
+          <ul class="pagination justify-content-center">
+            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+            <li class="active"><a href="#!">1</a></li>
+            <li class="waves-effect"><a href="#!">2</a></li>
+            <li class="waves-effect"><a href="#!">3</a></li>
+            <li class="waves-effect"><a href="#!">4</a></li>
+            <li class="waves-effect"><a href="#!">5</a></li>
+            <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+          </ul>
         </div>
+      </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-  </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </html>
+
+{% endblock %}
