--- a/templates/auth/user_app.html
+++ b/templates/auth/user_app.html
@@ -22,17 +22,19 @@
         <div class="row">
           <div class="col-md-3"></div>
           <div class="col-md-6 login-form-1">
-        <h1 style="text-align:center;">Cargar hoja de vida</h1>
-          <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <div class="input-field col s12">
-              <input type="submit" value="Grabar" class="blue darken-1 btn">
-            </div>
-          </form>
-          </div>
+            <h1 style="text-align:center;">Agregar hoja de vida</h1>
+            <form method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <div class="form-group" style="text-align:center;">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Guardar
+                    <i class="material-icons right">save</i>
+                </button>
+              </div>
+            </form>
           </div>
         </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
