--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -20,17 +20,17 @@
         {% if user.is_authenticated %}
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'users:userapp' %}">Agregar Hoja <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'users:userapp' %}">Agregar hoja de vida<span class="sr-only">(current)</span></a>
             </li>
           </ul>
 
           <ul class="navbar-nav mr-auto">
             {% if user.profile.rol.descripcion == "Administrador" %}
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'users:listar' %}">Listar Usuarios <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'users:listar' %}">Listar usuarios <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'users:listcontact' %}">Listar Hojas <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'users:listcontact' %}">Listar empleados<span class="sr-only">(current)</span></a>
               </li>
             {% endif %}
           </ul>
@@ -51,7 +51,7 @@
     </div>
 
   </body>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </html>
