--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,18 +5,21 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css\custom.css' %}">
   </head>
   <body>
     <div class = "container">
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <img src="{% static 'images\Logo.png' %}" title="logo" height="42" width="42" />
-      <a class="navbar-brand" href="{% url '' %}" >Inicio</a>
+      <a class="Inicio" href="{% url '' %}" >
+        <img src="{% static 'images\Logo.png' %}"  title="logo" height="42" width="42" />
+        Inicio
+      </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <!--comienzo del navbar
+      <div class="collapse navbar-collapse miclase" id="navbarSupportedContent">
         {% if user.is_authenticated %}
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -34,6 +37,29 @@
               </li>
             {% endif %}
           </ul>
+            <h6 class="ml-5">Usuario: {{ user.username }} - Rol: {{ user.profile.rol.descripcion }}
+              -Permiso: {{ perms.users.listarusuarios }}</h6>
+            <a href="{% url 'logout' %}" class="btn btn-info ml-2">Cerrar Sesión</a>
+        {% else %}
+          <a href="{% url 'users:signup' %}" class="btn btn-light ml-5">Registrarse</a>
+          <a href="{% url 'login' %}" class="btn btn-info">Iniciar Sesión</a>
+        {% endif %}
+      </div><!--fIN DEL navbar -->
+
+      <div class="miclase" id="navbarSupportedContent">
+        {% if user.is_authenticated %}
+            <li class="">
+              <a class="" href="{% url 'users:userapp' %}">Agregar hoja de vida<span class="sr-only">(current)</span></a>
+            </li>
+
+            {% if user.profile.rol.descripcion == "Administrador" %}
+              <li class="">
+                <a class="" href="{% url 'users:listar' %}">Listar usuarios <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="">
+                <a class="" href="{% url 'users:listcontact' %}">Listar empleados<span class="sr-only">(current)</span></a>
+              </li>
+            {% endif %}
 
             <h6 class="ml-5">Usuario: {{ user.username }} - Rol: {{ user.profile.rol.descripcion }}
               -Permiso: {{ perms.users.listarusuarios }}</h6>
@@ -42,8 +68,6 @@
           <a href="{% url 'users:signup' %}" class="btn btn-light ml-5">Registrarse</a>
           <a href="{% url 'login' %}" class="btn btn-info">Iniciar Sesión</a>
         {% endif %}
-
-
       </div>
     </nav>
     {% block content %}
