--- a/templates/auth/contact_list.html
+++ b/templates/auth/contact_list.html
@@ -21,7 +21,7 @@
         <div class="col s12 m12">
           <div class="responsive-table" class="table table-bordered">
               <h1 style="text-align:center;">LISTA DE EMPLEADOS</h1>
-                <table  class="table table-hover">
+                <table  class="table table-hover table-employee">
 
                   <thead>
                     <tr>
@@ -66,9 +66,9 @@
               </div>
             </div>
           </div>
-          <ul class="pagination justify-content-center">
+          <ul class="pagination justify-content-center pagination-employee">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#!">1</a></li>
+            <li class=""><a href="#!">1</a></li>
             <li class="waves-effect"><a href="#!">2</a></li>
             <li class="waves-effect"><a href="#!">3</a></li>
             <li class="waves-effect"><a href="#!">4</a></li>
