--- a/templates/auth/user_app.html
+++ b/templates/auth/user_app.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-1">
       <div class="form-group">
         <div class="row">
           <div class="col-md-3"></div>
