--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="col l6 s12">
           <img src="{% static 'images\Logo.png' %}"  title="logo" height="42" width="42" />
-          <p class="grey-text text-lighten-4">Aplicativo para el contros de hojas de vida</p>
+          <p class="grey-text text-lighten-4">Aplicativo para el control de hojas de vida</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
