Con editar y limpieza de codigo

--- a/templates/auth/contact_list.html
+++ b/templates/auth/contact_list.html
@@ -51,12 +51,10 @@
                         </a>
                       </td>
                       <td>
-                        <a href="{% url 'editar' data.cedula %}">
+                        <a href="{% url 'editar' data.id %}">
                             <i class="material-icons">create</i>
                         </a>
-                        <!--<a href="{% url 'eliminar' data.cedula %}">
-                            <i class="material-icons">clear</i>
-                        </a>-->
+
                       </td>
                     </tr>
                     {% endfor %}
