--- a/templates/auth/user_app.html
+++ b/templates/auth/user_app.html
@@ -22,7 +22,7 @@
         <div class="row">
           <div class="col-md-3"></div>
           <div class="col-md-6 login-form-1">
-            <h1 style="text-align:center;">Agregar hoja de vida</h1>
+            <h1 style="text-align:center;">Agregar-Actualizar hoja de vida</h1>
             <form method="post" enctype="multipart/form-data">
               {% csrf_token %}
               {{ form.as_p }}
