ajustes de estilos

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% block content %}
 <html>
 <head>
-  <title>Señor usuario, no tiene permiso de ingresar</title>
+  <title>Página no encontrada</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <center>
-            <img src="{% static 'images\403.png' %}"  title="403" style="width: 55%; max-height: 60%" / >
+            <img src="{% static 'images\404.png' %}"  title="404" style="width: 55%; max-height: 60%" / >
 
         </center>
     </div>
