--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -73,7 +73,7 @@
                         <h5 class="white-text">Links</h5>
                         <ul>
                             <li><a class="grey-text text-lighten-3" href="#!">Sobre Nosotros</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Uniremington</a></li>
+                            <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.uniremington.edu.co/manizales/">Uniremington</a></li>
                             <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
                             <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
                         </ul>
