--- a/templates/registration/account_activation_invalid.html
+++ b/templates/registration/account_activation_invalid.html
@@ -1,7 +1,17 @@
 {% extends 'base/base.html' %}
-  {% load static %}
-  {% block content %}
-  <div class="container">
-    <h4 class="m-5">Error al intentar activar al usuario </h4>
-  </div>
+{% load static %}
+{% block content %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Error</title>
+    </head>
+    <body>
+        <div class="container">
+          <h4 class="m-5">Error al intentar activar al usuario </h4>
+        </div>
+    </body>
+</html>
+
 {% endblock %}
