--- a/templates/auth/contact_list.html
+++ b/templates/auth/contact_list.html
@@ -33,6 +33,7 @@
                                     <th>Cargo</th>
                                     <th>Hoja de vida</th>
                                     <th>Editar</th>
+                                    <th>Ver más</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -53,6 +54,11 @@
                                         <td>
                                             <a href="{% url 'editar' data.id %}">
                                                 <i class="material-icons">create</i>
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="">
+                                                <i class="material-icons">more_horiz</i>
                                             </a>
                                         </td>
                                     </tr>
