--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -52,7 +52,7 @@
 
                     {% else %}
 
-                        <a href="{% url 'users:signup' %}" class="btn btn-light ml-5">Registrarse</a>
+                        <a href="{% url 'users:signup' %}" class="btn btn-light ml-5 btn-register">Registrarse</a>
                         <a href="{% url 'login' %}" class="btn btn-info">Iniciar Sesión</a>
                     {% endif %}
                 </div>
