--- a/templates/auth/user_list.html
+++ b/templates/auth/user_list.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="{% static 'css\custom.css' %}">
     </head>
     <body>
-        <div class="container">
+        <div class="container list-container-user">
             <h1 style="text-align:center;">Listado de usuarios</h1>
             <table class="table striped">
                 <tr>
