agrego dependencias y cargos

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -67,15 +67,13 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <img src="{% static 'images\Logo.png' %}"  title="logo" height="42" width="42" />
-                        <p class="grey-text text-lighten-4">Aplicativo para el control de hojas de vida</p>
+                        <p class="grey-text text-lighten-4">Aplicativo para el control de hojas de vida desarrollado en Python - Django</p>
                     </div>
                     <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
+                        <h5 class="white-text">Enlaces</h5>
                         <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">Sobre Nosotros</a></li>
-                            <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.uniremington.edu.co/manizales/">Uniremington</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                            <li><a class="grey-text text-lighten-3" href="..\templates\about_us.html">Sobre Nosotros</a></li>
+                            <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.uniremington.edu.co/manizales/">Uniremington Manizales</a></li>
                         </ul>
                     </div>
                 </div>
@@ -83,7 +81,7 @@
             <div class="footer-copyright grey darken-1">
                 <div class="container">
                     &copy; 2020 Maria José Buitrago - Evelio Atonio Hernandez
-                    <a class="grey-text text-lighten-4 right">Uniremington Manizales</a>
+                    <a class="grey-text text-lighten-4 right">Corporación universitaria Remington</a>
                 </div>
             </div>
         </footer>
