--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -4,14 +4,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <meta charset="utf-8">
         <title>About us</title>
     </head>
     <body>
-        <p>Somos dos estudiantes de la Corporación universitaria Remington con un mismo
-        sueño y una idea de proyecto para cumplirlo. Es aquí donde nace GEMA, una aplicación
-        para facilitar procesos empresariales, como es el alamcenamiento de hojas de vida
-        de los empleados.</p>
+        <div class="about">
+            <div class="about-text">
+                <h1 style="text-align:center;">Sobre nosotros</h1>
+                <p>Somos dos estudiantes de la Corporación universitaria Remington con un mismo
+                sueño y una idea de proyecto para cumplirlo. Es aquí donde nace GEMA, una aplicación
+                para facilitar procesos empresariales, como es el almacenamiento y actualización
+                de hojas de vida de los empleados.</p>
+            </div>
+            <img src="{% static 'images\about.png' %}" style="width: 50%; max-height: 60%" / >
+        </div>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 </html>
 {% endblock %}
