--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -72,7 +72,7 @@
                     <div class="col l4 offset-l2 s12">
                         <h5 class="white-text">Enlaces</h5>
                         <ul>
-                            <li><a class="grey-text text-lighten-3" href="..\templates\about_us.html">Sobre Nosotros</a></li>
+                            <li><a class="grey-text text-lighten-3" href="{% url 'nosotros' %}">Sobre Nosotros</a></li>
                             <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.uniremington.edu.co/manizales/">Uniremington Manizales</a></li>
                         </ul>
                     </div>
